fix parent's height is not all children's max height by using this solution : https://stackoverflow.com/a/38206349/4105113

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -76,6 +76,10 @@
   @include mq(md) {
     padding: 2rem 4rem;
     font-size: 1.1rem;
+
+    // to let page wrap's height is all children's height
+    display: flex;
+    flex-flow: row;
   }
 
   @include mq(sm) {
@@ -90,7 +94,6 @@
   flex-wrap: wrap;
 
   @include mq(md) {
-    position: absolute;
     width: $nav-width-md;
     float: left;
   }
